--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_riverpod: ^3.1.0
+  http: ^1.6.0
+  go_router: ^17.0.0
+  provider: ^6.1.5+1
+  intl: ^0.19.0
+  flutter_localization: ^0.3.3
 
 dev_dependencies:
   flutter_test:
