--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   provider: ^6.1.5+1
   intl: ^0.19.0
   flutter_localization: ^0.3.3
+  fl_chart: ^0.69.0
+  firebase_auth: ^6.1.3
+  cloud_firestore: ^6.1.1
+  
 
 dev_dependencies:
   flutter_test:
