--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   fl_chart: ^0.69.0
   firebase_auth: ^6.1.3
   cloud_firestore: ^6.1.1
+  flutter_secure_storage: ^10.0.0
+  supabase_flutter: ^2.12.0
   
 
 dev_dependencies:
