--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   fl_chart: ^0.69.0
   flutter_secure_storage: ^10.0.0
   supabase_flutter: ^2.12.0
+  widget_slider: ^0.1.0
+  shimmer: ^3.0.0
+  cached_network_image: ^3.3.0
   
 
 dev_dependencies:
